; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_mallctl_int64.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_mallctl_int64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mallctl_int64(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  store i64 0, i64* %5, align 8
  store i64 8, i64* %6, align 8
  %7 = load i64*, i64** %4, align 8
  %8 = icmp ne i64* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = load i64*, i64** %4, align 8
  %12 = call i32 @je_mallctl(i8* %10, i64* %5, i64* %6, i64* %11, i32 8)
  br label %16

13:                                               ; preds = %2
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @je_mallctl(i8* %14, i64* %5, i64* %6, i64* null, i32 0)
  br label %16

16:                                               ; preds = %13, %9
  %17 = load i64, i64* %5, align 8
  ret i64 %17
}

declare dso_local i32 @je_mallctl(i8*, i64*, i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
